# testcode

./: .gitignore  Web-Service-Upload-Log-Batch-Apr-2021.xlsx  accuracy.py  bsttest.py  bulk_download_output.py  combined.py  combined_sidewise.py  detectmoon.py  detectpoly.py  findcentroid.py  hmoments.py  hooktest.py  poly2.py  poly3.py  polygon.csv  polygon2.xlsx  polytest.py  pyproject.toml  runner.py  scattertest.py  zbartest.py
services/: defect_handler.py  generator.py  hook_identifier.py  zbar_service.py
