[tool.poetry]
name = "testcode"
version = "0.1.0"
description = ""
authors = ["saikat <saikatsakura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.1"
opencv-python = "^4.5.1"
seaborn = "^0.11.1"
pyzbar = "^0.1.8"
pandas = "^1.2.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
